2005-10-27  Frederic Ruaudel <grumz@grumz.net> 

	* plugin/nautilus-actions-utils.c (nautilus_actions_utils_parse_parameter):
	Fix a problem of duplicate string if no token found in the param string

2005-10-26  Frederic Ruaudel <grumz@grumz.net> 

	* libnautilus-actions/nautilus-actions-config.c 
	(nautilus_actions_config_add_action):
	Remove a duplicate action_dup.

	* utils/nautilus-actions-new-config.c (main):
	Use the new action function with default values set to
	avoid problem with unset unused values.

	* nact/nautilus-actions-config.glade (LegendDialog):
	* plugin/nautilus-actions-utils.c (nautilus_actions_utils_parse_parameter):
	Remove the %p parameter that was confusing with the %d one.

2005-10-25  Frederic Ruaudel <grumz@grumz.net> 

	* TODO: Add list of important things to do before next release

	* libnautilus-actions/nautilus-actions-config.c:
	(nautilus_actions_config_add_action) : After call to save_action
	add the new action in the hash table.
	(nautilus_actions_config_remove_action) : After call to remove_action
	remove the action from the hash table.

	* nact/nact.c (delete_button_clicked_cb): add call to
	fill_actions_list to update the list when removing an action.

2005-10-24  Rodrigo Moya <rodrigo@novell.com>

	* nact/nact.c (fill_actions_list): new function to reload the
	actions list.
	(add_button_clicked_cb, edit_button_clicked_cb): if there were
	changes in the action editor, reload the actions list.
	(setup_actions_list): move the actions list fillin to fill_actions_list.

2005-10-23  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nautilus-actions-config.glade:
	* po/bg.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/nautilus-actions.pot:
	* po/POTFILES.in: Update i18n stuff

	* nact/nact-editor.c: Fix init of scheme list when add a
	new action and manage basenames pattern load/save in the edit dialog

	* libnautilus-actions/nautilus-actions-config.c: Set empty
	basename and scheme list valid if empty.
